# qtprotobuf

./: CMakeLists.txt  build-grpc-android-arm64.bat  build-grpc-android.bat  build-grpc-mingw_64.bat  build-grpc-msvc2019_64.bat  build-qtprotobuf-android-arm64.bat  build-qtprotobuf-android.bat  build-qtprotobuf-mingw_64.bat  build-qtprotobuf-msvc2019_64.bat  env-android.cmd  env-common.cmd  env-custom.cmd  env-mingw_64.cmd  env-msvc2019_64.cmd  toolchain-mingw_64.cmake
cmake/: QtProtobufGen.cmake  QtProtobufInternalHelpers.cmake
examples/: CMakeLists.txt
examples/clienttutorial/: CMakeLists.txt
examples/examples_common/: CMakeLists.txt
src/generator/: QtqtprotobufgenConfig.cmake.in  clientdeclarationprinter.cpp  generatorbase.cpp  multifilegenerator.cpp  singlefilegenerator.cpp  templates.cpp  templates.h
src/grpc/: CMakeLists.txt  qabstractgrpcchannel.cpp  qabstractgrpcchannel.h  qabstractgrpcclient.cpp  qabstractgrpcclient.h  qgrpcasyncoperationbase.cpp  qgrpcasyncoperationbase_p.h  qgrpcasyncoperationwritebase.cpp  qgrpcasyncoperationwritebase_p.h  qgrpcchannel.cpp  qgrpcchannel.h  qgrpcchannel_p.h  qgrpchttp2channel.cpp  qgrpchttp2channel.h  qgrpcstatus.cpp  qgrpcstatus.h  qgrpcstream.cpp  qgrpcstreambidirect.cpp  qgrpcstreambidirect.h  qgrpcwritereplay.cpp  qgrpcwritereplay.h  qtgrpcglobal.h
src/grpc/quick/: CMakeLists.txt
src/protobuf/: CMakeLists.txt  qprotobuflazymessagepointer.h  qprotobufserializer_p.h  qqmllistpropertyconstructor.h
src/protobuf/quick/: CMakeLists.txt  qtprotobufquickplugin.cpp
src/qttypes/: CMakeLists.txt
src/wellknowntypes/: CMakeLists.txt  QtProtobufWellKnownTypesConfig.cmake.in
tests/: CMakeLists.txt
tests/test_extra_namespace_qml/: CMakeLists.txt
tests/test_grpc_qml/: CMakeLists.txt
tests/test_qml/: CMakeLists.txt
tests/test_qprotobuf_serializer_plugin/: CMakeLists.txt
tests/test_qprotobuf_serializer_plugin/serialization/: CMakeLists.txt
